# graphql-pydantic-dynamodb

./: AGENTS.md  README.md  dev.py  pyproject.toml
src/graphql_pydantic_dynamodb/: __init__.py  lambda_handler.py
src/graphql_pydantic_dynamodb/core/: __init__.py  dynamodb.py  settings.py
src/graphql_pydantic_dynamodb/domain/: __init__.py  models.py
src/graphql_pydantic_dynamodb/graphql/: __init__.py  schema.py
src/graphql_pydantic_dynamodb/persistence/: __init__.py  models.py  repositories.py
src/graphql_pydantic_dynamodb/services/: __init__.py  blog_service.py
test/: conftest.py  test_graphql_api.py  test_lambda_handler.py
